--- a/index.html
+++ b/index.html
@@ -5,8 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>assignment-1</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Work+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
-    
+    <header>
+        <div class="banner-file">
+            <div class="banner-details">
+                <h1 class="tittle">All Thinks Are Possible If You believe</h1>
+                <p class="description-1">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form injected humour.</p>
+                <button class="btn-1">Contact Us</button>
+            </div>
+
+        </div>
+    </header>
+    <main>
+        
+    </main>
+    <footer>
+
+    </footer>
+
 </body>
 </html>
