--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main>
         <!-- 2nd portion -->
         <section class="portion-2nd">
-            <img class="person" src="/images/person.png" width="550px" height="700px"> 
+            <img class="person" src="./images/person.png" width="550px" height="700px"> 
             
             <div class="failure-list">
                 <h3 class="failure-tittle">My failures of <br> previous year</h3>
